hphp/hack/test/typecheck/pair/pair-typehints.php.exp
File "pair-typehints.php", line 6, characters 13-15:
Wrong type hint (Typing[4110])
  File "pair-typehints.php", line 6, characters 13-15:
  Expected `int`
  File "pair-typehints.php", line 5, characters 8-10:
  But got `string`
File "pair-typehints.php", line 6, characters 18-20:
Wrong type hint (Typing[4110])
  File "pair-typehints.php", line 6, characters 18-20:
  Expected `int`
  File "pair-typehints.php", line 6, characters 27-29:
  But got `string`
